# nvflowervibe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  UPGRADE_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  esm2.yaml
docs/: DEPLOYMENT.md  INSTALL_NOTE.md  PRIVACY.md
examples/hpc/: README.md  generate_certs.sh  launch_federation.sh  monitor_training.sh  nvflare_distributed.py  project.yml  submit_client.sbatch  submit_server.sbatch
jobs/: esm2_runner.py  flower_runner.py  llm_runner.py  poc_runner.py  runner.py
scripts/: generate_nvflare_job.py  run_simulation.sh  setup.sh  slurm_esm2.sh
src/sfl/: __init__.py  types.py
src/sfl/client/: __init__.py  base.py  dp_client.py  inference.py  sum_client.py
src/sfl/esm2/: __init__.py  client.py  config.py  dataset.py  model.py  server.py
src/sfl/llm/: __init__.py  client.py  config.py  dataset.py  model.py  server.py
src/sfl/nvflare/: __init__.py  backend.py  staging.py
src/sfl/privacy/: __init__.py  accountant.py  adaptive_clip.py  audit.py  auto_mods.py  dp.py  filters.py  he.py  runner_utils.py  secagg.py
src/sfl/server/: __init__.py  app.py  dp_setup.py  robust.py  strategy.py
src/sfl/utils/: __init__.py  checkpoint.py  config.py  grpc_auth.py  logging.py  metrics.py  params.py  resources.py  rng.py
tests/: README.md  __init__.py  test_accountant.py  test_client.py  test_config.py  test_dpsgd.py  test_esm2_client.py  test_esm2_config.py  test_esm2_dataset.py  test_esm2_model.py  test_esm2_server.py  test_extensibility.py  test_filters.py  test_hpc_utils.py  test_integration.py  test_llm_client.py  test_llm_config.py  test_llm_dataset.py  test_llm_model.py  test_llm_server.py  test_nvflare_backend.py  test_privacy.py  test_robust.py  test_runner_utils.py  test_structure.py
